fixed gallery spacing

--- a/main.css
+++ b/main.css
@@ -170,7 +170,7 @@ ul{
     width: 300px;
     height: 300px;
     background-color: #779ABD;
-    margin: 0px 30px;
+    margin: 30px;
     transition: 1s;
     box-shadow: 20px 20px rgba(0,0,0,0.6);
     border: 2px dashed black;
